<resources>
    <string name="app_name">Paddie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--  ITEM VALUES & NAMES  -->
    <string name="menu_item_title">Notes</string>
    <string name="menu_item_todo_title">Todo</string>


    <!--  COMMON Strings  -->
    <string name="colon">:</string>
    <string name="hash">#</string>

    <!--  CONTENT DESCRIPTION  -->
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="cdGroupColor">Group Color</string>
    <string name="cdEmptyGroupNotice">No Groups Available. \nAdd One</string>
    <string name="cdAddNewNoteAndTodo">Add New Note And Todo</string>
    <string name="menu_item_share">Share The Note</string>
    <string name="menu_item_Favourite">Select as Favourite/Unfavourite</string>
    <string name="dateCreated">Created:</string>
    <string name="dateModified">Modified:</string>
    <string name="startDate">"Start: "</string>
    <string name="endDate">"End: "</string>
    <string name="txtUnDoneTodo">Not Done Yet</string>
    <string name="txtDoneTodo">Already Done</string>
    <string name="menu_item_delete">Delete this note</string>
    <string name="delete">Delete</string>
    <string name="favourite">Favourite</string>
    <string name="share">Share</string>
    <string name="reminder">Reminder</string>
    <string name="addRingTone">Add Ring Tone</string>
    <string name="description">Description</string>

    <!--  TOOL TIPS  -->
    <string name="ttPickColor">Click to select a color</string>

    <!--  HINTS  -->
    <string name="hintType">Type</string>
    <string name="hintSearch">Search</string>
    <string name="hintGroupTotal">Group Total</string>
    <string name="hintGroupName">Group Name</string>
    <string name="hintTitle">Title</string>
    <string name="hintDate">1/1/2000</string>
    <string name="hintDesc">Text...</string>
    <string name="Aa">Aa</string>
    <string name="f">F</string>
    <string name="ttItalicizeText">Toggle Italicized Text</string>
    <string name="ttBoldText">Toggle Bold Text</string>
    <string name="todo">Todo</string>
    <string name="note">Note</string>
    <string name="Username">username</string>
    <string name="Email">email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="add_profile_pic">Add Profile Pic</string>
    <string name="name">Name</string>
    <string name="middleName">Middle Name</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
    <string name="confirm_password">Confirm password</string>
    <string name="emails">Email</string>
    <string name="cancel">Cancel</string>
    <string name="create_account">Create Account</string>
    <string name="password_should_contain">Password should be digits (0-9), letters (a-z, A-Z) and at least 1 symbols</string>
    <string name="password_do_not_match">Password do not match</string>
    <string name="emailIsInvalid">Please enter valid Email</string>
    <string name="nameShouldBeBetween"><![CDATA[Name length should be 1 < x < 50]]></string>
    <string name="idNumber">ID number</string>
    <string name="phone_number">123456789</string>
    <string name="emailAddress">example@gmail.com</string>
    <string name="uploadToCloud">Upload To CLOUD</string>
    <string name="downloadFromCloud">Download From CLOUD</string>
    <string name="notYetUploaded">Not Yet Uploaded</string>
    <string name="alreadyUploaded">Already Uploaded</string>
    <string name="notYetDownloaded">Not Yet Downloaded</string>
    <string name="alreadyDownloaded">Already Downloaded</string>
</resources>