<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.signup.SignUpFragment">

    <TextView
        android:id="@+id/titleDescription"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/bg_cl_top_views"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleDescription"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLogin_createAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="italic|bold" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/sIvProfilePhoto_createAcc"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:shapeAppearanceOverlay="@style/circular"
                android:scaleType="centerCrop"
                app:strokeWidth="4dp"
                android:padding="4dp"
                app:strokeColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:src="@drawable/kamake" />

            <Button
                android:id="@+id/btnAddProfilePic_createAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:text="@string/add_profile_pic"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvInvalidFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/nameShouldBeBetween"
                android:textColor="#F44336"
                android:textSize="11sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiEdtFirstName_createAcc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="9dp"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tvInvalidMidName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/nameShouldBeBetween"
                android:textColor="#F44336"
                android:textSize="11sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/middleName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiEdtMiddleName_createAcc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="9dp"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tvInvalidLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:visibility="gone"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/nameShouldBeBetween"
                android:textColor="#F44336"
                android:textSize="11sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiEdtLastName_createAcc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="9dp"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:text="@string/gender"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rgGender_createAcc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbGenderM_createAcc"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="Male"
                    android:checked="true"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rbGenderF_createAcc"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="Female"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rbGenderO_createAcc"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="Rather not say"
                    android:textSize="12sp" />
            </RadioGroup>



            <TextView
                android:id="@+id/tvInvalidEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                android:text="@string/emailIsInvalid"
                android:textColor="#F44336"
                android:textSize="11sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/emails">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiEdtEmail_createAcc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:padding="9dp"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvPasswordShouldContain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:visibility="gone"
                android:layout_marginTop="5dp"
                android:text="@string/password_should_contain"
                android:textColor="#F44336"
                android:textSize="11sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                app:passwordToggleEnabled="true"
                android:layout_marginEnd="8dp"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiEdtPassword_createAcc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="9dp"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tvPasswordDoNotMatch"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/password_do_not_match"
                android:textColor="#F44336"
                android:textSize="11sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                app:passwordToggleContentDescription=""
                app:passwordToggleEnabled="true"
                android:layout_marginEnd="8dp"
                android:hint="@string/confirm_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiEdtConfirmPassword_createAcc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="9dp"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel_createAcc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:text="@string/cancel"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnCreateAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:text="@string/create_account"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>