<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_marginTop="2dp"
    android:background="@color/transparent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:background="#4AE0E0E0"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/sIvDeveloperPhoto_listItem"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="4dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/black"
            android:layout_alignParentStart="true"
            android:scaleType="centerCrop"
            android:src="@drawable/kamake"
            app:shapeAppearanceOverlay="@style/circular" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/sIvDeveloperPhoto_listItem"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:gravity="start"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/tvDeveloperName_listItem"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:hint="@string/Username" />

            <TextView
                android:id="@+id/tvDeveloperId_listItem"
                android:layout_width="wrap_content"
                android:textStyle="italic|bold"
                android:textSize="12sp"
                android:textColor="@color/gray"
                android:layout_height="wrap_content"
                android:hint="@string/idNumber" />

            <TextView
                android:id="@+id/tvDeveloperEmail_listItem"
                android:layout_width="wrap_content"
                android:textStyle="italic"
                android:textSize="12sp"
                android:textColor="@color/gray"
                android:layout_height="wrap_content"
                android:hint="@string/emailAddress" />
        </LinearLayout>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>