<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="4dp"
    android:elevation="9dp"
    android:background="@drawable/bg_list_item"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:padding="4dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvNoteTitleListItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintTitle"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvNoteDateListItem"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/tvNoteDescListItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintDesc"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivFavouriteNoteListItem"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoteTitleListItem" />


    <TextView
        android:id="@+id/tvNoteDateListItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/hintDate"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/tvNoteDescListItem"
        app:layout_constraintEnd_toStartOf="@+id/ivFavouriteNoteListItem"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivFavouriteNoteListItem"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chkbxSelectBox_listItem"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_unfavourite" />


    <CheckBox
        android:id="@+id/chkbxSelectBox_listItem"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:visibility="gone"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_delete" />
</androidx.constraintlayout.widget.ConstraintLayout>