<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.fera.paddie.feat_auth.login.LoginFragment"
    tools:ignore="ExtraText">


    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/bg_cl_top_views"
        android:gravity="center"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:gravity="start"-->
    <!--        android:orientation="horizontal">-->

    <!--        <TextView-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginTop="5dp"-->
    <!--            android:gravity="center"-->
    <!--            android:text="@string/no_account_sign_up"-->
    <!--            android:textColor="@color/black"-->
    <!--            android:textSize="13sp"/>-->

    <TextView
        android:id="@+id/tvSignUp_login"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        android:text="Create Account."
        android:textColor="#3880D7"
        android:textSize="13sp"
        android:textStyle="italic|bold" />
    <!--    </LinearLayout>-->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/paddie_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily=""
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiEdtEmail_login"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="text"
            android:maxWidth="300dp"
            android:minWidth="250dp"
            android:padding="7dp"
            android:textColor="@color/black"
            android:textSize="13sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiEdtPassword_login"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:maxWidth="300dp"
            android:minWidth="250dp"
            android:padding="7dp"
            android:textColor="@color/black"
            android:textSize="13sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnLogin_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:padding="8dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUsers_login"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        tools:listitem="@layout/list_item_user" />

</LinearLayout>
